feat(*) update the map convert tool